tests/sumo/basic/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_13_0+0011-a81882c started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.25s
 Real time factor: 1968.5
 UPS: 121287.401575
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 91
 Waiting: 1
Statistics (avg):
 RouteLength: 350.68
 Speed: 7.69
 Duration: 65.69
 WaitingTime: 29.61
 TimeLoss: 47.17
 DepartDelay: 0.70

